[tool.poetry]
name = "lang-channel"
version = "0.1.0"
description = ""
authors = ["Andrei Borisevich <andreyborisevichleti@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lang_channel"},
  ]


[tool.poetry.dependencies]
python = "~=3.12.2"

gspread = "==6.1.4"
loguru = "==0.7.3"
pillow = "==11.1.0"
python-telegram-bot = "==21.10"
python-crontab = "==3.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
poetry-core = "^2.1.1"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
pylint = "^3.3.4"
pyright = "^1.1.394"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"
reportOptionalMemberAccess=false

[tool.black]
line-length = 120

[tool.pylint]
errors-only=true
disable=[
    "import-error"
]
max-line-length = 120
