[project]
name = "lang-channel"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Andrei Borisevich", email = "andreyborisevichleti@gmail.com" },
]
dependencies = [
    "gspread==6.1.4",
    "loguru==0.7.3",
    "pillow==11.1.0",
    "python-telegram-bot[job-queue]>=21.10,<22",
    "python-dotenv>=1.0.1,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pre-commit>=4.1.0,<5",
    "pylint>=3.3.4,<4",
    "pyright>=1.1.394,<2",
    "black>=25.1.0,<26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lang_channel"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
reportOptionalMemberAccess = false

[tool.black]
line-length = 120

[tool.pylint]
errors-only = true
disable = [
    "import-error",
]
max-line-length = 120
